@@ -13,7 +13,7 @@
  *
  **********************************************************************
  *
- * Last port: operation/linemerge/LineMerger.java rev. 1.7 (JTS-1.10)
+ * Last port: operation/linemerge/LineMerger.java r320 (JTS-1.11)
  *
  **********************************************************************/
 
@@ -126,6 +126,7 @@ public:
 	/**
 	 * \brief
 	 * Returns the LineStrings built by the merging process.
+	 *
 	 * Ownership of vector _and_ its elements to caller.
 	 */
 	std::vector<geom::LineString*>* getMergedLineStrings();
